tests/error/modifier_errors/flags_nested.err
Error: Unitary constraint violation (at $FILE:16:12)
   | 
14 |     with dagger:
15 |         with power(2):
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
